--- a/src/components/movieCard/MovieCard.css
+++ b/src/components/movieCard/MovieCard.css
@@ -1,16 +1,19 @@
 .movie-card-container{
-width: 200px;
-height: 400px;
-border-radius: 8px;
+width: 250px;
+height: 140px;
+border-radius: 5px;
 overflow: hidden;
 background: #111;
 color: #fff;
 box-shadow: 0 2px 8px rgba(0,0,0,0.2);
 cursor: pointer;
+flex-shrink: 0;
 }
 
 .movie-title-container{
 padding: 10px;
+display: flex;
+justify-content: space-between;
 }
 
 h3{
@@ -25,7 +28,7 @@ margin: 0px;
 .movie-card-container img {
   transition: transform 0.3s ease;
   width: 100%;
-  height: 300px;
+  height: 140px;
   object-fit: cover;
 }
 
