--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -14,7 +14,7 @@
   align-items: center;
   justify-content: flex-start;
   color: #fff;
-  font-size: 1.2rem;
+  font-size: 1rem;
   padding: 0 4%;
   position: relative;
   transition: background-color 0.4s;
@@ -31,11 +31,13 @@
   position: absolute;
   right: 4%;
   top: 0;
+  gap: 20px;
 }
 
 .logo {
   font-size: 24px;
   font-weight: bold;
+  color: #e50914;
 }
 
 .nav-links {
