--- a/src/components/topTen/TopTen.css
+++ b/src/components/topTen/TopTen.css
@@ -1,32 +1,28 @@
 .movie-card-topten {
   position: relative;
   flex-shrink: 0;
-  width: 300px;
-  height: 170px;
-  margin-right: 16px;
+  width: 250px;
+  height: 177px;
+  margin-right: 10px;
   overflow: hidden;
   border-radius: 8px;
-  background-color: #111;
   display: flex;
   align-items: center;
 }
 
 .movie-card-topten img {
-  width: 100%;
+  width: 50%;
   height: 100%;
-  object-fit: cover;
+  display: flex;
+  align-items: flex-end;
 }
 
-.movie-card-topten .number {
-  position: absolute;
-  left: -15px;
+.svg-number {
   top: 0;
   bottom: 0;
   display: flex;
-  align-items: center;
-  font-size: 110px;
-  font-weight: bold;
-  color: #ffffff;
-  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.8);
+  align-items:flex-start;
   z-index: 2;
+  width: 100px;
+  height: 100%;
 }
