Se suben cambios sobre el subheader

--- a/src/App.css
+++ b/src/App.css
@@ -10,5 +10,5 @@
 }
 
 body{
-  font-family: 'DM Sans', sans-serif;
+  font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;
 }
